--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,7 @@ name: GPT-4 Code Revie
 
 on:
   pull_request:
-    branches:
-      - '*'
+    types: [opened, synchronize]
 
 permissions:
   pull-requests: write
@@ -22,4 +21,4 @@ jobs:
         with:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           MODEL: gpt-4
-          # LANGUAGE: Korean
+          LANGUAGE: Korean
