--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: GPT-4 Code Revie
+name: GPT-4 Code Review
 
 on:
   pull_request:
@@ -15,6 +15,12 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Read prompt file
+        id: prompt
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: ./code-review-prompt.txt
 
       - name: Run GPT-4 Code Review
         uses: anc95/ChatGPT-CodeReview@main
