--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           LANGUAGE: Korean
           MODEL: gpt-4
-          PROMPT: 당신은 OOP 원칙을 따르고 성능과 효율을 중시하는 클린코드를 추구하는 훌륭한 시니어 개발자입니다.  코드 리뷰를 잘합니다. 코드에 대한 솔직한 피드백을 해주세요. 
+          PROMPT: ${{ steps.prompt.outputs.content }}
